# potato-generation

./: .gitignore  Makefile  README.md  config.yaml.example  pyproject.toml  shell.nix
codegen/: Makefile  codegen.yml  package-lock.json  package.json
docker/: docker-compose.yaml
src/: main.py
src/diff/: config.py  db.py  gen.py  graphql.py  image_result.py  login.py  messages.py  nats.py  schema.py  server.py  storage.py  upscale.py  worker.py
ui/: .gitignore  Makefile  codegen.yml  package-lock.json  package.json
ui/graphql/: schema.json
ui/public/: index.html
ui/src/: App.tsx  ImageViewer.tsx  Loading.tsx  MediaViewer.tsx  Submit.tsx  index.tsx
ui/src/graphql/: queries.graphql
